# vstatistic

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
tests/: orderbook.csv  return_dia.csv  return_meta.csv  return_spy.csv  returns.csv  test_core.py  test_metrics.py
vstatistic/: __init__.py  core.py  metrics.py  plot.py  report.html  utils.py
vstatistic/plotting/: core.py  wrappers.py
